# kucg

./: .gitignore  CMakeLists.txt  README.en.md  README.md
cmake/: test_component_dep.cmake  test_planc_dep.cmake
scripts/: run_stars_func.py  run_stars_perf.py
src/: CMakeLists.txt
src/core/: ucg_base.c  ucg_compatible.c  ucg_compatible.h  ucg_context.c  ucg_context.h  ucg_dt.c  ucg_dt.h  ucg_global.c  ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h  ucg_request.c  ucg_request.h  ucg_topo.c  ucg_topo.h
src/planc/: CMakeLists.txt  ucg_planc.c  ucg_planc.h  ucg_planc_def.h  ucg_planm.c  ucg_planm.h
src/planc/hccl/: CMakeLists.txt  planc_hccl_context.c  planc_hccl_context.h  planc_hccl_global.c  planc_hccl_plan.h
src/planc/stars/: CMakeLists.txt  planc_stars_algo.c  planc_stars_algo.h  planc_stars_buffer.c  planc_stars_buffer.h  planc_stars_context.c  planc_stars_context.h  planc_stars_def.h  planc_stars_global.c  planc_stars_global.h  planc_stars_group.c  planc_stars_group.h  planc_stars_offload.c  planc_stars_offload.h  planc_stars_oob.c  planc_stars_oob.h  planc_stars_plan.c  planc_stars_plan.h  planc_stars_wireup.c  planc_stars_wireup.h
src/planc/stars/algorithm/: planc_stars_algo_def.h
src/planc/stars/algorithm/allgatherv/: allgatherv.c  allgatherv.h  allgatherv_rolling.c
src/planc/stars/algorithm/alltoallv/: alltoallv.c  alltoallv.h  alltoallv_pairwise.c
src/planc/stars/algorithm/barrier/: barrier.c  barrier.h  barrier_faninfanout.c  barrier_faninfanout.h
src/planc/stars/algorithm/bcast/: bcast.c  bcast.h  bcast_long.c  bcast_long_m.c  bcast_ring_2m.c  bcast_ring_m.c
src/planc/stars/algorithm/scatterv/: scatterv.c  scatterv.h  scatterv_kntree.c
src/planc/stars/comm/base/: scs.h  scs_config.h  scs_def.h
src/planc/stars/comm/base/arch/920f/: cpu.h  machine.c  machine.h  numa.c  numa.h  stars.c  stars.h
src/planc/stars/comm/base/arch/offload/: machine.c  machine.h  numa.c  stars.c  stars.h
src/planc/stars/comm/base/datastruct/: queue.h  stack.h
src/planc/stars/comm/base/memory/: numa.c  numa.h
src/planc/stars/comm/base/stats/: stats.c  stats.h
src/planc/stars/comm/base/sys/: sys.c  sys.h
src/planc/stars/comm/base/time/: time.c  time.h
src/planc/stars/comm/protocol/: scp.h  scp_address.c  scp_address.h  scp_context.c  scp_context.h  scp_def.h  scp_ep.c  scp_ep.h  scp_mm.c  scp_mm.h  scp_rma.c  scp_rma.h  scp_worker.c  scp_worker.h
src/planc/stars/comm/transport/base/: sct.h  sct_component.c  sct_component.h  sct_def.h  sct_iface.c  sct_iface.h  sct_md.c  sct_md.h  sct_mem.c  sct_req.c  sct_worker.c  sct_worker.h  tl.h
src/planc/stars/comm/transport/ib/base/: ib_device.c  ib_device.h  ib_iface.c  ib_iface.h  ib_md.c  ib_md.h  ib_verbs.h
src/planc/stars/comm/transport/ib/rc/: rc_offload_ep.c  rc_offload_ep.h  rc_offload_iface.c  rc_offload_iface.h  rc_offload_md.c  rc_offload_md.h
src/planc/stars/comm/transport/ib/rc/base/: rc_def.h  rc_ep.c  rc_ep.h  rc_iface.c  rc_iface.h
src/planc/stars/comm/transport/sm/sdma/: sdma_offload_ep.c  sdma_offload_ep.h  sdma_offload_iface.c  sdma_offload_iface.h  sdma_offload_md.c  sdma_offload_md.h
src/planc/ucx/: CMakeLists.txt  planc_ucx_context.c  planc_ucx_context.h  planc_ucx_def.h  planc_ucx_global.c  planc_ucx_global.h  planc_ucx_group.c  planc_ucx_group.h  planc_ucx_meta.c  planc_ucx_p2p.c  planc_ucx_p2p.h  planc_ucx_plan.c  planc_ucx_plan.h
src/planc/ucx/allgatherv/: allgatherv.c  allgatherv.h  allgatherv_bruck.c  allgatherv_linear.c  allgatherv_meta.c  allgatherv_meta.h  allgatherv_na_rolling.c  allgatherv_neighbor.c  allgatherv_ring.c  allgatherv_ring_hpl.c
src/planc/ucx/allreduce/: allreduce.c  allreduce.h  allreduce_meta.c  allreduce_meta.h  allreduce_na_kntree.c  allreduce_na_rabenseifner.c  allreduce_na_rd_and_bntree.c  allreduce_na_rd_and_kntree.c  allreduce_nta_kntree.c  allreduce_rabenseifner.c  allreduce_rd.c  allreduce_ring.c  allreduce_sa_kntree.c  allreduce_sa_rabenseifner.c  allreduce_sa_rd_and_bntree.c  allreduce_sa_rd_and_kntree.c
src/planc/ucx/barrier/: barrier.c  barrier.h  barrier_meta.c  barrier_meta.h  barrier_na_kntree.c  barrier_na_rd_and_bntree.c  barrier_na_rd_and_kntree.c  barrier_rd.c  barrier_sa_kntree.c  barrier_sa_rd_and_bntree.c  barrier_sa_rd_and_kntree.c
src/planc/ucx/bcast/: bcast.c  bcast.h  bcast_inc_2_ring_m.c  bcast_inc_ring_m.c  bcast_kntree.c  bcast_long.c  bcast_long_modified.c  bcast_na_bntree.c  bcast_na_kntree.c  bcast_na_kntree_and_bntree.c  bcast_nta_kntree.c  bcast_ring.c  bcast_van_de_geijn.c
src/planc/ucx/gatherv/: gatherv.c  gatherv.h  gatherv_linear.c
src/planc/ucx/reduce/: reduce.c  reduce.h  reduce_kntree.c
src/planc/ucx/scatterv/: scatterv.c  scatterv.h  scatterv_kntree.c  scatterv_linear.c  scatterv_na_kntree.c
src/ucg/api/: ucg.h  ucg_version.h.in
src/util/: ucg_array.h  ucg_atomic.h  ucg_class.h  ucg_component.c  ucg_component.h  ucg_hash.h  ucg_helper.h  ucg_list.h  ucg_lock.h  ucg_log.c  ucg_log.h  ucg_malloc.c  ucg_malloc.h  ucg_math.h  ucg_mpool.c  ucg_mpool.h  ucg_parser.h  ucg_profile.h
src/util/algo/: ucg_kntree.c  ucg_kntree.h  ucg_rd.c  ucg_rd.h  ucg_rh.h  ucg_rolling.c  ucg_rolling.h
tests/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  stub.cpp  stub.h
tests/gtest/core/: test_context.cpp  test_dt.cpp  test_global.cpp  test_group.cpp  test_plan.cpp  test_plan.h  test_rank_map.cpp  test_request.cpp  test_topo.cpp
tests/gtest/planc/: test_planc.cpp
tests/gtest/planc/hccl/: test_hccl_base.cpp  test_hccl_context.cpp  test_hccl_group.cpp
tests/gtest/planc/ucx/: test_ucx_allgatherv.cpp  test_ucx_allreduce.cpp  test_ucx_barrier.cpp  test_ucx_bcast.cpp  test_ucx_context.cpp  test_ucx_gatherv.cpp  test_ucx_group.cpp  test_ucx_reduce.cpp  test_ucx_scatterv.cpp
tests/gtest/util/: test_algo.cpp  test_algo.h  test_component.cpp
tools/info/: CMakeLists.txt  plan_info.c  ucg_info.h
